1. gradle 6.x -> 7.2 2. jdk 16 -> 17 3. openjfx 11 -> 17-ea 4. openjfx-plugin 0.0.8 -> 0.0.10 5. jCenter -> mavenCentral

--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ subprojects {
     group = 'classpy'
 
     repositories {
-        jcenter()
+        mavenCentral()
     }
 
     plugins.withType(JavaPlugin).configureEach {
@@ -17,12 +17,12 @@ subprojects {
         // options.compilerArgs += '--enable-preview'
     }
     tasks.withType(JavaExec) {
-        jvmArgs += '--enable-preview'
+        //jvmArgs += '--enable-preview'
         // jvmArgs += '-XX:+ShowCodeDetailsInExceptionMessages'
     }
 
     tasks.withType(Test).configureEach {
-        jvmArgs += "--enable-preview"
+        //jvmArgs += "--enable-preview"
         useJUnitPlatform()
     }
 }
