--- a/classpy-gui/build.gradle
+++ b/classpy-gui/build.gradle
@@ -1,12 +1,11 @@
 plugins {
     id 'application'
-    id 'org.openjfx.javafxplugin' version '0.0.8'
+    id 'org.openjfx.javafxplugin' version '0.0.10'
     id 'org.beryx.jlink' version '2.12.0'
-    // https://github.com/openjfx/javafx-gradle-plugin/issues/90
-    // id 'org.openjfx.javafxplugin' version '0.0.9'
 }
 
 javafx {
+    version = '17-ea+11'
     modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
 
@@ -17,8 +16,6 @@ dependencies {
     implementation project(':classpy-bitcoin')
     implementation project(':classpy-wasm')
     // implementation project(':utilities')
-    // testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.1'
-    // testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
 
 application {
